k3s/apps/services/git/statefulset.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gitea
  labels:
    app.kubernetes.io/name: gitea
  namespace: services
spec:
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: gitea
  serviceName: gitea
  template:
    metadata:
      annotations: {}
      labels:
        app.kubernetes.io/name: gitea
    spec:
      securityContext:
        fsGroup: 1000
      terminationGracePeriodSeconds: 60
      containers:
        - name: gitea
          image: "gitea/gitea:1.14.4"
          imagePullPolicy: IfNotPresent
          ports:
            - name: ssh
              containerPort: 10222
            - name: http
              containerPort: 3080
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 200
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 10
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          resources: {}
          securityContext: {}
          volumeMounts:
            - name: temp
              mountPath: /tmp/gitea
            - name: data
              mountPath: /data
      volumes:
        - name: init
          secret:
            secretName: gitea-secret
            items:
              - key: init_gitea.sh
                path: init_gitea.sh
                mode: 0777
        - name: config
          secret:
            secretName: gitea-secret
            items:
              - key: app.ini
                path: app.ini
                mode: 0644
        - name: temp
          emptyDir: {}
        - name: data
          persistentVolumeClaim:
            claimName: nfs-pvc-git
