k3s/apps/services/git/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: gitea
  labels:
    app.kubernetes.io/name: gitea
  namespace: services
  annotations: {}
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.30.14
  externalTrafficPolicy: Local
  ports:
  - name: http
    port: 3080
    targetPort: 3080
    protocol: TCP
  - name: ssh
    port: 10222
    targetPort: 10222
    protocol: TCP
  selector:
    app.kubernetes.io/name: gitea
