k3s/apps/services/git/ingress.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/name: gitea
  name: gitea
  namespace: services
  annotations:
    kubernetes.io/ingress.class: traefik
    kubernetes.io/ingress.allow-http: "false"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: services-rate-limit@kubernetescrd,services-traefik-real-ip@kubernetescrd
    external-dns.alpha.kubernetes.io/hostname: git.technolab.cloud
    external-dns.alpha.kubernetes.io/target: technolab.cloud
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
spec:
  rules:
  - host: git.technolab.cloud
    http:
      paths:
      - path: /
        backend:
          serviceName: gitea
          servicePort: 3080
  tls:
  - hosts:
    - git.technolab.cloud
    secretName: services-technolab-cloudflare-org-tls
